{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 16,
  "lineage": "eed94135-08af-deef-1b71-aab3487d3a43",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group/sg-00a6ee291178e4c49",
            "description": "EC2 collectors for MSK",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a6ee291178e4c49",
            "ingress": [],
            "name": "msk-sg_collectors",
            "name_prefix": "",
            "owner_id": "640168415309",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "tags_all": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "timeouts": null,
            "vpc_id": "vpc-088763652e22bcc79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sg-00a6ee291178e4c49",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consumers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group/sg-0a350aa7e5fbff500",
            "description": "EC2 consumers for MSK",
            "egress": [],
            "id": "sg-0a350aa7e5fbff500",
            "ingress": [],
            "name": "msk-sg_consumers",
            "name_prefix": "",
            "owner_id": "640168415309",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "tags_all": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "timeouts": null,
            "vpc_id": "vpc-088763652e22bcc79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sg-0a350aa7e5fbff500",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk_brokers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group/sg-09299e75fe6179e36",
            "description": "MSK Serverless broker SG",
            "egress": [],
            "id": "sg-09299e75fe6179e36",
            "ingress": [],
            "name": "msk-crypto-sg_brokers",
            "name_prefix": "",
            "owner_id": "640168415309",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "tags_all": {
              "AccessScope": "Hadi",
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "timeouts": null,
            "vpc_id": "vpc-088763652e22bcc79"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sg-09299e75fe6179e36",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "msk_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group-rule/sgr-075060b49c5af5822",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Broker outbound",
            "from_port": null,
            "id": "sgr-075060b49c5af5822",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-09299e75fe6179e36",
            "security_group_rule_id": "sgr-075060b49c5af5822",
            "tags": null,
            "tags_all": {
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sgr-075060b49c5af5822",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.msk_brokers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_iam_9098_from_collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group-rule/sgr-0311580610ce78b8a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Collector-to-broker SASL/IAM TLS within VPC",
            "from_port": 9098,
            "id": "sgr-0311580610ce78b8a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-00a6ee291178e4c49",
            "region": "ap-south-1",
            "security_group_id": "sg-09299e75fe6179e36",
            "security_group_rule_id": "sgr-0311580610ce78b8a",
            "tags": null,
            "tags_all": {
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sgr-0311580610ce78b8a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.collector",
            "aws_security_group.msk_brokers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "msk_iam_9098_from_consumers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:640168415309:security-group-rule/sgr-0f0ffb930b3e6021d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Consumer-to-broker SASL/IAM TLS within VPC",
            "from_port": 9098,
            "id": "sgr-0f0ffb930b3e6021d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a350aa7e5fbff500",
            "region": "ap-south-1",
            "security_group_id": "sg-09299e75fe6179e36",
            "security_group_rule_id": "sgr-0f0ffb930b3e6021d",
            "tags": null,
            "tags_all": {
              "Env": "prod",
              "Owner": "Hadi",
              "Project": "CryptoData"
            },
            "to_port": 9098
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "640168415309",
            "id": "sgr-0f0ffb930b3e6021d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.consumers",
            "aws_security_group.msk_brokers"
          ]
        }
      ]
    }
  ]
}